Upgrade command and module system